examples/ingress/ingress-nginx-controller.yaml
# OBS: On Minikube you MUST enable the ingress addon
# > minikube addons enable ingress

# On any other cluster (AWS,GCP,Azure,OnPremisse) you must install the nginx ingress controller to run this example.
# You cloud also use cloud build in services for http load balancing (https://kubernetes.io/docs/concepts/services-networking/ingress-controllers/)

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    # Extra config for nginx controller. This tells the ingress to rewrite the URL
    # paths when forwarding traffic to services.
    # For example, if a user access the URL http://app.my.domain.com/path1 and this 
    # configuration is not set, the ingress will map:
    # http://app.my.domain.com/simplepath -> service1:8080/simplepath
    # But the service has no path1 configured, so this configuration will rewrite this path to /
    # http://app.my.domain.com/simplepath -> app-service:8080/
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /prefixpath # The URL path to forward http traffic
            pathType: Prefix # Checks whether the path starts with 'prefixpath'
            backend:
              serviceName: service1 # The service name to forward to
              servicePort: 8080   # The port on service to forward
          - path: /simplepath # The URL path to forward http traffic
            backend:
              serviceName: service2 # The service name to forward to
              servicePort: 80   # The port on service to forward
